force-app/main/default/objects/Lista_Negra__c/Lista_Negra__c.object-meta.xml
<CustomObject>
    <label>Lista 110</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listas 110</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>