force-app/main/default/objects/Lista_Negra__c/fields/Alias_de_buena_calidad__c.field-meta.xml
<CustomField>
    <fullName>Alias_de_buena_calidad__c</fullName>
    <label>Alias de buena calidad</label>
    <length>55</length>
    <type>Text</type>
</CustomField>