force-app/main/default/objects/Lista_Negra__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <description>Cuenta relacionada a la Lista Negra.</description>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Lista_Negra</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>