force-app/main/default/objects/Lista_Negra__c/fields/Fecha_de_inclusion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_inclusion__c</fullName>
    <label>Fecha de inclusión</label>
    <type>Date</type>
</CustomField>