force-app/main/default/objects/Lista_Negra__c/fields/Identificador_externo__c.field-meta.xml
<CustomField>
    <fullName>Identificador_externo__c</fullName>
    <label>Identificador externo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>