force-app/main/default/objects/Lista_Negra__c/fields/Incluir_en_Lista_Negra__c.field-meta.xml
<CustomField>
    <fullName>Incluir_en_Lista_Negra__c</fullName>
    <label>Incluir en Lista Negra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>