force-app/main/default/objects/Lista_Negra__c/fields/Motivo_de_ingreso__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_ingreso__c</fullName>
    <description>En este campo se ingresa el motivo por lo cuál el cliente esta ingresado a la Lista Negra.</description>
    <inlineHelpText>¿Cuál es el motivo de ingreso a la Lista Negra?</inlineHelpText>
    <label>Motivo de ingreso</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>