force-app/main/default/objects/Lista_Negra__c/fields/Numero_de_pasaporte__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_pasaporte__c</fullName>
    <label>Número de pasaporte</label>
    <length>55</length>
    <type>Text</type>
</CustomField>