force-app/main/default/objects/Lista_Negra__c/fields/Numero_nacional_de_identidad__c.field-meta.xml
<CustomField>
    <fullName>Numero_nacional_de_identidad__c</fullName>
    <label>Número nacional de identidad</label>
    <length>55</length>
    <type>Text</type>
</CustomField>