force-app/main/default/objects/Lista_Negra__c/fields/Otros_datos__c.field-meta.xml
<CustomField>
    <fullName>Otros_datos__c</fullName>
    <label>Otros datos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>