force-app/main/default/objects/Lista_Negra__c/fields/Titulo__c.field-meta.xml
<CustomField>
    <fullName>Titulo__c</fullName>
    <label>Título</label>
    <length>55</length>
    <type>Text</type>
</CustomField>